changes in abstract, intro (i), (ii), around models talk in Sec 3, at the end of Sec 4, and a sentence on focusing in conclusion

--- a/ncl22-revised.bib
+++ b/ncl22-revised.bib
@@ -9,8 +9,6 @@
   doi       = {10.1002/malq.19900360405}
 }
 
-
-
 @article{altenkirch:monads:2014,
   author    = {Thorsten Altenkirch and
                James Chapman and
@@ -199,7 +197,7 @@
   title={Categorical Semantics of Linear Logic},
   author={Paul-Andr{\'e} Melli{\`e}s},
   booktitle = {Interactive Models of Computation and Program Behavior},
-  editor = "P.-L. Curien and H. Herbelin and J.-L. Krivine and P.-A. Melli{\`e}s",
+  editor = "Pierre-Louis Curien and Hugo Herbelin and Jean-Louis Krivine and Paul-Andr{\'e} Melli{\`e}s",
   series={Panoramas et syntheses},
   volume={27},
   pages={15--215},
@@ -338,3 +336,16 @@
   year      = {2019},
   doi       = {10.23638/lmcs-15(1:9)2019}
 }
+
+@incollection{dyckhoff:ljq,
+  author = "Roy Dyckhoff and St{\'e}phane Lengrand",
+  title = "LJQ: A Strongly Focused Calculus for Intuitionistic Logic",
+  editor = "Arnold Beckmann and Ulrich Berger and Benedikt L{\"o}we and John V. Tucker",
+  booktitle = "Proc.\ of 2nd Conf.\ on Computability in Europe, CiE 2006",
+  series = "Lect.\ Notes in Comput.\ Sci.",
+  volume = 3988,
+  pages = "173--185",
+  publisher = "Springer",
+  year = 2006,
+  doi = "10.1007/11780342_19"
+}  
